<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_edit_page" />

        <EditText
            android:id="@+id/edtEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_event_name"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/no_date_selected"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEventName" />

        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/select_date"
            app:layout_constraintBottom_toBottomOf="@id/tvDate"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDate" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/no_time_selected"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelectDate" />

        <Button
            android:id="@+id/btnSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/select_time"
            app:layout_constraintBottom_toBottomOf="@id/tvTime"
            app:layout_constraintStart_toEndOf="@id/tvTime"
            app:layout_constraintTop_toTopOf="@id/tvTime" />

        <EditText
            android:id="@+id/edtLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_location"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelectTime"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtLocation"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edtEnterParticipant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_participant"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btnAddParticipant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtDescription"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnAddParticipant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@id/edtEnterParticipant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edtEnterParticipant"
            app:layout_constraintTop_toTopOf="@id/edtEnterParticipant" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnAddParticipant" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>